Fix text wrapping css bug in 'other actions' report row

--- a/app/styles/pages/artifact-timeline.styl
+++ b/app/styles/pages/artifact-timeline.styl
@@ -34,6 +34,7 @@
   transition margin 250ms
 
 .timeline-item
+  white-space normal
   border-left 1px dashed ngrey-subtle
   &:last-child
     border-right 1px dashed ngrey-subtle
